@@ -262,6 +262,9 @@ TOPOLOGY_POLICE 0       # the topology police is your last defense against tunne
                         # detect tunneling ( passing from one side of a wall to the other ) and kills the tunneler
                         # afterwards. It is disabled by default because there is a risk of false accusations, and because
                         # the regular game machanisms are tunneling-proof in theory except for "fresh" walls.
+TOPOLOGY_POLICE_PARALLEL 1 # if TOPOLOGY_POLICE is set to 1, this flag can be disabled to disable checks for parallel walls.
+                           # Depending on the server's other settings, those can be false alarms in most cases.
+
 
 ############################################################################################
 #
